--- a/index.html
+++ b/index.html
@@ -2905,11 +2905,11 @@ return colorScheme;
                         
                                     <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre1.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre1.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/1.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre1.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Развлечения</a>
+                                                <a href="/Ganres/ganre1.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Развлечения</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2917,11 +2917,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre2.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre2.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/2.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre2.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Общение</a>
+                                                <a href="/Ganres/ganre2.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Общение</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2929,11 +2929,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre3.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre3.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/3.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre3.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Экономические</a>
+                                                <a href="/Ganres/ganre3.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Экономические</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2941,11 +2941,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre4.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre4.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/4.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre4.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Три в ряд</a>
+                                                <a href="/Ganres/ganre4.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Три в ряд</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2953,11 +2953,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre5.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre5.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/5.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre5.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Ролевые</a>
+                                                <a href="/Ganres/ganre5.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Ролевые</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2965,11 +2965,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre6.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre6.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/6.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre6.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Гиперказуальные</a>
+                                                <a href="/Ganres/ganre6.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Гиперказуальные</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2977,11 +2977,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre7.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre7.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/7.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre7.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Аркады</a>
+                                                <a href="/Ganres/ganre7.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Аркады</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2989,11 +2989,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre8.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre8.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/8.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre8.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Словесные</a>
+                                                <a href="/Ganres/ganre8.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Словесные</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3001,11 +3001,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre9.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre9.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/9.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre9.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Настольные</a>
+                                                <a href="/Ganres/ganre9.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Настольные</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3013,11 +3013,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre10.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre10.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/10.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre10.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Гонки</a>
+                                                <a href="/Ganres/ganre10.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Гонки</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3025,11 +3025,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre11.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre11.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/11.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre11.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Стратегии</a>
+                                                <a href="/Ganres/ganre11.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Стратегии</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3037,11 +3037,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre12.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre12.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/12.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre12.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">3D-шутеры</a>
+                                                <a href="/Ganres/ganre12.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">3D-шутеры</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3049,11 +3049,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre13.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre13.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/13.png"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre13.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Симуляторы</a>
+                                                <a href="/Ganres/ganre13.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Симуляторы</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3061,11 +3061,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre14.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre14.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/14.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre14.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Головоломки</a>
+                                                <a href="/Ganres/ganre14.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Головоломки</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3073,11 +3073,11 @@ return colorScheme;
 
 <div>
                                         <div class="ganre-banner__content">
-                                            <a href="/ganres/ganre15.html" class="game-banner__link" data-role="game-link">
+                                            <a href="/Ganres/ganre15.html" class="game-banner__link" data-role="game-link">
                                                 <img src="/static/images/ganres/15.jpg"  class="GamesCatalogCard__image" data-role="game-link">
                                             </a>
                                             <div class="game-banner__info">
-                                                <a href="/ganres/ganre15.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Приключения</a>
+                                                <a href="/Ganres/ganre15.html" class="game-banner__title" style="margin-left: 200px; text-align: center;" data-role="game-link">Приключения</a>
                                             </div>
                                         </div>
                                     </div>
