--- a/Ganres/ganre1.html
+++ b/Ganres/ganre1.html
@@ -1938,92 +1938,92 @@ return colorScheme;
                                                 <div style="background-color: white; border-radius: 10px; margin-top: 10px;">
                                                     <div style="height: 30px;"></div>
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/1.png" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre1.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Развлечения</a>
+                                                        <img src="/static/images/ganres/1.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre1.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Развлечения</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/2.png" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre2.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Общение</a>
+                                                        <img src="/static/images/ganres/2.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre2.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Общение</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/3.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre3.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Экономические</a>
+                                                        <img src="/static/images/ganres/3.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre3.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Экономические</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/4.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre4.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Три в ряд</a>
+                                                        <img src="/static/images/ganres/4.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre4.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Три в ряд</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/5.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre5.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Ролевые</a>
+                                                        <img src="/static/images/ganres/5.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre5.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Ролевые</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/6.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre6.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Гиперказуальные</a>
+                                                        <img src="/static/images/ganres/6.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre6.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Гиперказуальные</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/7.png" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre7.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Аркады</a>
+                                                        <img src="/static/images/ganres/7.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre7.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Аркады</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/8.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre8.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Словесные</a>
+                                                        <img src="/static/images/ganres/8.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre8.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Словесные</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/9.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre9.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Настольные</a>
+                                                        <img src="/static/images/ganres/9.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre9.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Настольные</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/10.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <img src="/static/images/ganres/10.png" style="width: 60px; height: 60px; margin-left: 20px;">
                                                         <a href="/Ganres/ganre10.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Гонки</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/11.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <img src="/static/images/ganres/11.png" style="width: 60px; height: 60px; margin-left: 20px;">
                                                         <a href="/Ganres/ganre11.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Стратегии</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/12.png" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre12.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">3D-шутеры</a>
+                                                        <img src="/static/images/ganres/12.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre12.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">3D-шутеры</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/13.png" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre13.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Симуляторы</a>
+                                                        <img src="/static/images/ganres/13.png" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre13.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Симуляторы</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/14.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre14.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Головоломки</a>
+                                                        <img src="/static/images/ganres/14.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre14.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Головоломки</a>
                                                     </div>
 
 
                                                     <div style="display: flex; justify-content: left;">
-                                                        <img src="/static/images/Ganres/15.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
-                                                        <a href="/ganres/ganre15.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Приключения</a>
+                                                        <img src="/static/images/ganres/15.jpg" style="width: 60px; height: 60px; margin-left: 20px;">
+                                                        <a href="/Ganres/ganre15.html" style="margin-left: 40px; margin-top: 25px; text-decoration:none;">Приключения</a>
                                                     </div>
 
                                                     <div style="height: 30px;"></div>
