--- a/clear_index.html
+++ b/clear_index.html
@@ -2016,7 +2016,7 @@ World Poker Club - Покер
 </div></div>
 </div>
 <div class="GamesCatalogPromoContent" id="games_catalog_promo_content">
-  <a class="GamesCatalogFeaturedGamePromoBanner page_block" href="/games_calendar?ref=apps_featured_promo_game_banner"
+  <a class="GamesCatalogFeaturedGamePromoBanner page_block" 
 style="background-image: url('https://sun9-78.userapi.com/impf/DuMKeoTrjB70dJRnHLSPH7XvchaNlowqVfXQuQ/3gw6lzrAi5Y.jpg?size=911x256&quality=100&sign=f5b0556482a60ffc28b65bb8d9f1c1bc')"
 onclick="showWiki({w: 'app8122140', ref: 'apps_featured_promo_game_banner'}, false, event)"
 >
