--- a/profiles/user1_profile.html
+++ b/profiles/user1_profile.html
@@ -2871,11 +2871,11 @@ return colorScheme;
                                     </div>
                                     <div class="GamesCatalogFeed__rowWrap" id="apps_notification_1003144697" data-id="1003144697" data-read="0">
                                         <div class="GamesCatalogFeed__item _game-params" data-app-id="3144697" data-need-install="0" data-ref="56" data-options="{&quot;nids&quot;:1003144697}" data-from-id="">
-                                        <div class="GamesCatalogFeed__leftPart"><a class="GamesCatalogFeed__avatar" href="/spinthebottlegame?ref=56" onclick="return Apps.runFromFeed(event);" data-title="Целуй и Знакомься" onmouseover="showTitle(this, null, null, {needRight: 1, appendEl: document.body});">
+                                        <div class="GamesCatalogFeed__leftPart"><a class="GamesCatalogFeed__avatar" href="/games/game1.html" onclick="return Apps.runFromFeed(event);" data-title="Целуй и Знакомься" onmouseover="showTitle(this, null, null, {needRight: 1, appendEl: document.body});">
                                         <img class="GamesCatalogFeed__avatarImg" src="https://sun1-24.userapi.com/impf/xAi_xzLIpalvkNfcva9S4PXReNQ7TRWJ_2fvVQ/WVVm5z49Xqg.jpg?size=75x75&amp;quality=90&amp;sign=95fae22e535519d9ffa563323ccf1f06" alt="Целуй и Знакомься">
                                       </a></div>
-                                        <div class="GamesCatalogFeed__rightPart"><a href="/spinthebottlegame?ref=56" onclick="return Apps.runFromFeed(event);" class="GamesCatalogFeed__appTitle">Целуй и Знакомься</a><div class="GamesCatalogFeed__notificationText">Скорее заберите ежедневный бонус    сердечек!</div><div class="GamesCatalogFeed__notificationTime">четыре часа назад</div><div class="apps_notification_buttons clear_fix">
-                                        <a class="FlatButton FlatButton--primary FlatButton--size-m fl_l" draggable="false" href="/spinthebottlegame?ref=56" onclick="return Apps.runFromFeed(event);">
+                                        <div class="GamesCatalogFeed__rightPart"><a href="/games/game1.html" onclick="return Apps.runFromFeed(event);" class="GamesCatalogFeed__appTitle">Целуй и Знакомься</a><div class="GamesCatalogFeed__notificationText">Скорее заберите ежедневный бонус    сердечек!</div><div class="GamesCatalogFeed__notificationTime">четыре часа назад</div><div class="apps_notification_buttons clear_fix">
+                                        <a class="FlatButton FlatButton--primary FlatButton--size-m fl_l" draggable="false" href="/games/game1.html" onclick="return Apps.runFromFeed(event);">
                                         <span class="FlatButton__in">
                                           
                                           <span class="FlatButton__content">Запустить</span>
