--- a/profile.html
+++ b/profile.html
@@ -1949,46 +1949,46 @@ return colorScheme;
                                             <p class="page_block_header_inner _header_inner"><h2><b>Любимые игры</b></h2></p>
                                             <div style="display: flex; justify-content: left;">
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 20px;">
-                                                    <p style="margin-left: 20px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game1.html"><img src="static/images/Games/game1.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 20px;"></a>
+                                                    <a href="/games/game1.html"><p style="margin-left: 20px; margin-top: 3px;"><b>Бутылочка</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game4.html"><img src="static/images/Games/game4.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game4.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Куб</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game8.html"><img src="static/images/Games/game8.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game8.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Косынка</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game9.html"><img src="static/images/Games/game9.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game9.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Battle Arena</b></p></a>
                                                 </div>
                                             </div>
                                             <div style="display: flex; justify-content: left;">
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 20px;">
-                                                    <p style="margin-left: 20px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game12.html"><img src="static/images/Games/game12.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 20px;"></a>
+                                                    <a href="/games/game12.html"><p style="margin-left: 20px; margin-top: 3px;"><b>Empire City</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game3.html"><img src="static/images/Games/game3.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game3.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Рейд Героев</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game5.html"><img src="static/images/Games/game5.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game5.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Метро 2033</b></p></a>
                                                 </div>
                                                 <div>
-                                                    <img src="static/images/profile_pic.jpg"
-                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;">
-                                                    <p style="margin-left: 10px; margin-top: 3px;"><b>Название</b></p>
+                                                    <a href="/games/game16.html"><img src="static/images/Games/game16.jpg"
+                                                    style="width: 95px; height: 95px; border-radius: 10%; object-fit: cover; margin-left: 10px;"></a>
+                                                    <a href="/games/game16.html"><p style="margin-left: 10px; margin-top: 3px;"><b>Качок</b></p></a>
                                                 </div>
                                             </div>
                                             <br>
